# goe_covid_notebooks

./: README.md  pyproject.toml  requirements.txt
jupyter/: constants.ipynb  imports.ipynb  utils.ipynb
jupyter/analysis/: dashboard.ipynb
jupyter/data/: goettingen_campus_covid_publications.ipynb  goettingen_campus_institutions.ipynb
output/: goe_campus_grid_ids.txt  possible_goe_campus_institutions.csv
output/tables/: ds_goe_authors_affiliation.csv  ds_goe_authors_cooperation.csv  ds_goe_authors_full_names.csv  ds_goe_authors_location.csv  ds_goe_authors_main_affiliation.csv  ds_goe_categories.csv  ds_goe_categories_affiliations.csv  ds_goe_categories_affiliations_count.csv  ds_goe_categories_for.csv  ds_goe_categories_for_publications.csv  ds_goe_categories_publications.csv  ds_goe_categories_sdg.csv  ds_goe_category_count.csv  ds_goe_cooperations.csv  ds_goe_covid.csv
