[tool.poetry]
name = "goe_covid_notebooks"
version = "0.1.0"
description = "A collection of Jupyter Notebooks to query, transform, extract, analyze, and visualize information about COVID-19 publications from researchers of the Göttingen Campus."
authors = ["Andreas Lüschow <lueschow@sub.uni-goettingen.de>"]

[tool.poetry.dependencies]
python = "^3.8 <3.10"
google-cloud = "^0.34.0"
pandas = "^1.2.5"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
google-cloud-bigquery = "^2.20.0"
google-cloud-bigquery-storage = "^2.4.0"
pyarrow = "^4.0.1"
grpcio = "^1.38.1"
tqdm = "^4.61.1"
plotly = "^5.1.0"
kaleido = "0.2.1"
dash = "^1.20.0"
jupyter-dash = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
